--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,104 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/* Google Font Link */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.container {
+    background: #EDF0F6;
+    background: linear-gradient(354deg, #137DF5 0%, #14B1F8 100%);
+    width: 320px;
+    height: 550px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    border-radius: 10px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container_date {
+    color: white;
+    margin-top: 76px;
+    opacity: 47%;
+    font-size: 22px;
+    font-weight: 400;
 }
+
+.container_city {
+    margin-top: 1rem;
+    font-size: 37px;
+    font-weight: 700;
+    color: white;
+
+}
+
+.container_degree {
+    font-size: 50px;
+    font-weight: 800;
+    color: white;
+    position: relative;
+    top: -20px;
+}
+
+.container_img {
+    position: relative;
+    height: 150px;
+    width: 150px;
+}
+
+.degree_icon {
+    font-size: 20px;
+}
+
+.country_per {
+    position: relative;
+    top: -15px;
+    color: white;
+    font-size: 18px;
+}
+
+.input {
+    border: none;
+    padding: 1rem;
+    background: #e8e8e8;
+    transition: 0.3s;
+    position: relative;
+    top: -2px;
+}
+
+.input:focus {
+    outline-color: #e8e8e8;
+    background: #e8e8e8;
+    box-shadow: inset 20px 20px 60px #e8e8e8,
+        inset -20px -20px 60px #ffffff;
+    transition: 0.3s;
+}
+
+/* button */
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+    color: #090909;
+    padding: 0.7em 0.7em;
+    font-size: 18px;
+    cursor: pointer;
+    border: 1px solid #e8e8e8;
+    transition: all 0.3s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button:hover{
+    color: #666;
+    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button:active {
+    color: #666;
+    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.form {
+    margin-top: 3rem;
 }
